Closed Bug 602837 Opened 14 years ago Closed 14 years ago

Pinch doesn't care about orientation

Categories

(Core Graveyard :: Widget: Qt, defect)

x86
Linux
defect
Not set
normal

Tracking

(fennec2.0b2+)

RESOLVED FIXED
Tracking Status
fennec 2.0b2+ ---

People

(Reporter: tatiana, Assigned: tatiana)

Details

Attachments

(1 file)

Attached patch patchSplinter Review
current pinch implementation ignores landscape/portrait
Attachment #481806 - Flags: review?(romaxa)
Assignee: nobody → tanya.meshkova
Status: NEW → ASSIGNED
This is 100% needed for portrait mode
Attachment #481806 - Flags: review?(romaxa) → review+
tracking-fennec: --- → 2.0b2+
http://hg.mozilla.org/mozilla-central/rev/32fa0f1f2ee9
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: