Bug 602837 - Pinch doesn't care about orientation. r=romaxa a=blocking-fennec